--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -8,13 +8,17 @@ en:
       already_confirmed: "was already confirmed, please try signing in"
       not_locked: "was not locked"
       not_saved:
-        one: "1 error prohibited this %{resource} from being saved:"
-        other: "%{count} errors prohibited this %{resource} from being saved:"
+        # one: "1 error prohibited this %{resource} from being saved:"
+        one: "1 error"
+        # other: "%{count} errors prohibited this %{resource} from being saved:"
+        other: "%{count} errores"
 
   devise:
     failure:
-      already_authenticated: 'You are already signed in.'
-      unauthenticated: 'You need to sign in or sign up before continuing.'
+      # already_authenticated: 'You are already signed in.'
+      # unauthenticated: 'You need to sign in or sign up before continuing.'
+      already_authenticated: 'Ya inició sesión.'
+      unauthenticated: 'Debe iniciar sesión para continuar'
       unconfirmed: 'You have to confirm your account before continuing.'
       locked: 'Your account is locked.'
       invalid: 'Invalid email or password.'
@@ -22,8 +26,10 @@ en:
       timeout: 'Your session expired, please sign in again to continue.'
       inactive: 'Your account was not activated yet.'
     sessions:
-      signed_in: 'Signed in successfully.'
-      signed_out: 'Signed out successfully.'
+      # signed_in: 'Signed in successfully.'
+      # signed_out: 'Signed out successfully.'
+      signed_in: 'Ha iniciado sesión.'
+      signed_out: 'Ha cerrado sesión.'
     passwords:
       send_instructions: 'You will receive an email with instructions about how to reset your password in a few minutes.'
       updated: 'Your password was changed successfully. You are now signed in.'
