--- a/todo
+++ b/todo
@@ -1,3 +1,4 @@
 - nombre y telefono de persona de contacto en header de las paginas de las llamadas
 - llenar datos de anomalias y tipos de anomalias
 - menu volver en show centros
+- tablas estado municipio parroquia
