--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -21,7 +21,8 @@ en:
       unauthenticated: 'Debe iniciar sesión para continuar'
       unconfirmed: 'You have to confirm your account before continuing.'
       locked: 'Your account is locked.'
-      invalid: 'Invalid email or password.'
+      # invalid: 'Invalid email or password.'
+      invalid: 'email o password inválido.'
       invalid_token: 'Invalid authentication token.'
       timeout: 'Your session expired, please sign in again to continue.'
       inactive: 'Your account was not activated yet.'
