--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -22,7 +22,7 @@ en:
       unconfirmed: 'You have to confirm your account before continuing.'
       locked: 'Your account is locked.'
       # invalid: 'Invalid email or password.'
-      invalid: 'Nombre de usuario o password inválido.'
+      invalid: 'Email o password inválido.'
       invalid_token: 'Invalid authentication token.'
       timeout: 'Your session expired, please sign in again to continue.'
       inactive: 'Your account was not activated yet.'
